Upgrade ANTLR version to 4.7 - better unicode support
Also fixed tons of warnings from errorprone plugin,
many of them were related to using system-dependent
charset when reading/writing data from files.